# DungeonTemplateLibrary

./: .gitattributes  .gitignore  .markdownlint.json  CMakeLists.txt  DungeonTemplateLibrary.sln  LICENSE  LICENSE_1_0.txt  README.md  REFERENCE.md  index.html  出力-ビルド.txt
.circleci/: config.yml
.github/: FUNDING.yml
CharacterUserInterface/: CharacterUserInterface.vcxproj  CharacterUserInterface.vcxproj.filters  Test.cpp  str.csv
Clang/: Clang.vcxproj  Clang.vcxproj.filters  Source.cpp
DungeonTemplateLibrary/: 20190329.cpp  20190411.cpp  20190421.cpp  20190426.cpp  20190427.cpp  BaseShape.h  BaseShape.hpp  Base_Struct.hpp  Beta_BoardGame.hpp  Beta_DungeonBinarization.hpp  Beta_DungeonFile.hpp  Beta_DungeonMatrix.hpp  Beta_DungeonNoise.hpp  Beta_DungeonOutput.hpp  Beta_DungeonPaint.hpp  Beta_DungeonRandom.hpp  Beta_DungeonStandard.hpp  Beta_FractalIsland.hpp  Beta_HorizontalScroll.hpp  Beta_MazeDig.hpp  Beta_RogueLike.hpp  Beta_SimpleRogueLike.hpp  Beta_SimpleVoronoiIsland.hpp  BoardGame.hpp  BorderOdd.cpp  Bucket.cpp  Camera_MatrixView.hpp  Check.cpp  Color.cpp  Console_OutputNumber.hpp  Console_OutputString.hpp  Console_OutputStringBool.hpp  Console_Output_Number.hpp  Console_Output_String.hpp  Console_Output_StringBool.hpp  DTL.hpp  DiamondSquareAverage.hpp  DungeonBinarization.hpp  DungeonConsole.hpp  DungeonEntity.hpp  (+89 more)
DungeonTemplateLibrary/Base/: Struct.hpp
DungeonTemplateLibrary/Beta/: BoardGame.hpp  DungeonFile.hpp  DungeonNoise.hpp  DungeonPaint.hpp  DungeonRandom.hpp  FractalIsland.hpp  MazeDig.hpp  Rect.hpp  SimpleRogueLike.hpp
DungeonTemplateLibrary/Camera/: MatrixView.hpp
DungeonTemplateLibrary/Console/: OutputNumber.hpp  OutputString.hpp  OutputStringBool.hpp  OutputView.hpp
DungeonTemplateLibrary/DTL/: Base.hpp  Console.hpp  Deprecated.hpp  Random.hpp  Retouch.hpp  Shape.hpp  ThirdParty.hpp  Utility.hpp  desktop.ini
DungeonTemplateLibrary/Deprecated/: BoardGame.hpp  DungeonBinarization.hpp  DungeonFile.hpp  DungeonMatrix.hpp  DungeonNoise.hpp  DungeonOutput.hpp  DungeonPaint.hpp  DungeonRandom.hpp  FractalIsland.hpp  HorizontalScroll.hpp  MazeDig.hpp  RogueLike.hpp  SimpleRogueLike.hpp  SimpleVoronoiIsland.hpp
DungeonTemplateLibrary/Entity/: MobManager.hpp
DungeonTemplateLibrary/Macro/: nodiscard.hpp
DungeonTemplateLibrary/Macros/: constexpr.hpp  nodiscard.hpp
DungeonTemplateLibrary/OldCPP/: SampleColorCode.cpp  Source.cpp  Test_030.cpp  Wand.cpp  str_md.txt  svi.txt
DungeonTemplateLibrary/OldSave/: SimpleRogueLike.csv  SimpleRogueLike.pbm
DungeonTemplateLibrary/Random/: MersenneTwister32bit.hpp
DungeonTemplateLibrary/Reference/: Border.cpp
DungeonTemplateLibrary/Retouch/: BuryPoint.hpp  RemovePoint.hpp
DungeonTemplateLibrary/Save/: SimpleRogueLike.dtlm  SimpleRogueLike.md  SimpleRogueLike_0_9.txt  test.md  test.pbm  test_ds.md
DungeonTemplateLibrary/Shape/: AbsoluteMemberRect.hpp  AbsoluteRect.hpp  Border.hpp  BorderOdd.hpp  CellularAutomatonIsland.hpp  CellularAutomatonMixIsland.hpp  DiamondSquareAverage.hpp  DiamondSquareAverageCornerIsland.hpp  DiamondSquareAverageIsland.hpp  FractalIsland.hpp  FractalLoopIsland.hpp  HalfMixRect.hpp  MazeDig.hpp  MazeDig_OLD.hpp  MixRect.hpp  Point.hpp  PointGrid.hpp  PointGridAndSomeBlocksWithBorder.hpp  PointGridWithBorder.hpp  RandomRect.hpp  RandomVoronoi.hpp  Rect.hpp  SimpleRogueLike.hpp  SimpleVoronoiIsland.hpp  WhiteNoise.hpp  desktop.ini
DungeonTemplateLibrary/Storage/: FileCSV.hpp  FilePNG.hpp  FileTerrainOBJ.hpp
DungeonTemplateLibrary/Utility/: Binarization.hpp  CellularAutomaton.hpp  CharCast.hpp  Copy.hpp  Init.hpp  IsOutputCast.hpp  Matrix.hpp  NoiseBool.hpp  NoiseShoreBool.hpp  RandomBool.hpp  RandomInnerRandomValue.hpp  Replace.hpp  ReplaceAll.hpp  ReplaceSome.hpp  SetItem.hpp  VoronoiDiagram.hpp
DungeonTemplateLibrary_C99/: DTL.h  DungeonBinarization.h  DungeonNoise.h  DungeonOutput.h  DungeonRandom.h  DungeonStandard.h  DungeonTemplateLibrary_C99.vcxproj  DungeonTemplateLibrary_C99.vcxproj.filters  FractalIsland.h  MazeDig.h  SimpleRogueLike.h  SimpleVoronoiIsland.h  Source.c  Source.cpp
MSVC/Clang/: Clang.vcxproj  Source.cpp  aa.hdr
MSVC/DungeonTemplateLibrary/: 20190329.cpp  20190411.cpp  20190426.cpp  20190502.cpp  DungeonTemplateLibrary.vcxproj  DungeonTemplateLibrary.vcxproj.filters  a.txt  aa.hdr  aa.tga  file_sample.hdr  file_sample.pbm  file_sample.tga  file_sample.txt  file_sample2.hdr  file_sample2.pbm  file_sample_0_9.txt
Picture/Save/: test.pbm
Reference/: Reference.sln
Reference/Sample/: citin.txt  command.txt  shape_Border.cpp  shape_CellularAutomatonMixIsland.cpp  shape_DiamondSquareAverageIsland.cpp  shape_FractalLoopIsland.cpp  storage_FileBMP.cpp  storage_FileMD.cpp
Sample/: CMakeLists.txt  Sample.vcxproj  Sample.vcxproj.filters  command.txt  mersenne_twister_32bit_1.cpp  read_test.dtlm  write_test.csv  write_test.pbm
Sample/DTL/: CMakeLists.txt
Sample/DTL/Shape/: All.cpp  CMakeLists.txt  FractalIsland.cpp  PointGrid.cpp  PointGridAndSomeBlocksWithBorder.cpp  Rect.cpp
Sample/DTL/Storage/: CMakeLists.txt  FileBMP.cpp  FileHDR.cpp  FileJPG.cpp  FileMD.cpp  FilePNG.cpp  FileTGA.cpp
Sample/DTL/shape/: BorderOdd.cpp  DiamondSquareAverageCornerIsland.cpp  RandomRect.cpp  RandomVoronoi.cpp  Reversi.cpp  SimpleRogueLike.cpp
Sample/shape/: CellularAutomatonIsland.cpp  MazeDig.cpp  SimpleVoronoiIsland.cpp  WhiteNoise.cpp
Sample/storage/: FileJPG.cpp  FilePNG.cpp
SampleCode/: SampleMatrixTypeSTL.cpp  SampleReversiWinningPercentage.cpp
SampleCode/0_1_X/: SampleReversi.cpp  SampleSeaWaterAndFreshWater.cpp
SampleCode/Reference/: PointGrid.cpp  Rect.cpp
TimeMeasurement/: Source.cpp  TimeMeasurement.vcxproj  TimeMeasurement.vcxproj.filters
Unity/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset
VS2019/: DungeonTemplateLibrary.sln
VS2019/DungeonTemplateLibrary/: 20190421.cpp  20190502.cpp  DungeonTemplateLibrary.vcxproj.filters  SpeedTest.cpp
cmake/modules/: DecideCXXStanderd.cmake  dtl-config.cmake
include/: DTL.hpp
include/Base/: Struct.hpp
include/Board/: WriteNumber.hpp
public/: test.html
(+590 files in other folders)
